# a6x_pioneer_ws

./: .gitignore  README.md
a6x_commander/: CMakeLists.txt  package.xml
a6x_commander/launch/: a6x_demo.launch.py  position.launch.py  position2.launch.py  run_mtc.launch.py
a6x_commander/src/: commander.cpp  hello_moveit.cpp  mtc_tutorial.cpp  position.cpp  position2.cpp  test_moveit copy.cpp
a6x_description/: CMakeLists.txt  package.xml
a6x_description/config/rviz/: a6x_config.rviz
a6x_description/launch/: a6x_description.launch.py
a6x_description/meshes/visual/: arm_link.STL  base_link.STL  camera_link.STL  forearm_link.STL  left_finger_link.STL  lower_wrist_link.STL  palm_link.STL  right_finger_link.STL  shoulder_link.STL  upper_wrist_link.STL
a6x_description/urdf/: a6x.urdf  a6x_macro.urdf.xacro  open_manipulator_x.urdf
a6x_description/urdf/configuration/: a6x_robot_physics.usd  a6x_robot_robot.usd  a6x_robot_sensor.usd
a6x_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
a6x_moveit_config/config/: a6x_robot.ros2_control.xacro  a6x_robot.srdf  a6x_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pick_and_place_config.rviz  ros2_controllers.yaml
a6x_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
a6x_ros2_control/: CMakeLists.txt  package.xml
a6x_ros2_control/config/controller/: a6x_control.yaml
a6x_ros2_control/config/rviz/: a6x_config.rviz
a6x_ros2_control/description/ros2_control/: a6x_system.ros2_control.xacro
a6x_ros2_control/description/urdf/: a6x.urdf.xacro
a6x_ros2_control/launch/: a6x_robot.launch.py
cybergear_hardware/: canbus_init.sh
cybergear_hardware/cybergear_control/src/: cybergear_hardware_interface.cpp
cybergear_hardware/cybergear_servo_description/meshes/: cybergear_body.stl  cybergear_table.stl
cybergear_hardware/cybergear_servo_description/urdf/: cybergear_servo.xacro
dynamixel_hardware/dynamixel_hardware_interface/: CMakeLists.txt
dynamixel_hardware/dynamixel_hardware_interface/ros2_control/: dynamixel_motor.ros2_control.xacro
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
mtc_tutorial/: CMakeLists.txt  package.xml
mtc_tutorial/launch/: a6x_demo.launch.py  run_mtc.launch.py
mtc_tutorial/src/: mtc_tutorial.cpp
unitree_hardware/: CMakeLists.txt  LICENSE  README.md  package.xml  unitree_hardware.xml
unitree_hardware/controllers/: controllers.yaml
unitree_hardware/description/urdf/: dummy.ros2_control.urdf.xacro  (+4 more)
unitree_hardware/launch/: dummy.launch.py  dummy.rviz  single_motor.launch.py  single_motor.rviz
unitree_hardware/src/: joint_limits.cpp  unitree_actuator.cpp  unitree_hardware.cpp
unitree_hardware/unitree_actuator_sdk/: CMakeLists.txt
(+21 files in other folders)
